Mudança de Pasta do Rodapé

--- a/src/app/componentes/rodape/rodape.component.css
+++ b/src/app/componentes/rodape/rodape.component.css
@@ -5,6 +5,7 @@
     padding: 20px 0;
     position: fixed; /* Posição fixa para manter o rodapé no fundo da página */
     bottom: 0; /* Alinhar o rodapé ao fundo */
+    margin: 0;
     width: 100%; 
   }
   
