Inserção de Cards

--- a/src/app/galeria/galeria.component.html
+++ b/src/app/galeria/galeria.component.html
@@ -1,2 +1,62 @@
-<p>galeria works!</p>
+<div class="navbar">
+  <h2 class="titulo-de-pagina">Galeria de Mulheres Empreendedoras</h2>
+</div>
+<section class="page-grid-section">
+  <div>
+<mat-card class="example-card">
+    <mat-card-header>
+      <mat-card-title>Maria</mat-card-title>
+      <mat-card-subtitle>Empresária</mat-card-subtitle>
+    </mat-card-header>
+    <img mat-card-image src="https://cdn.pixabay.com/photo/2023/12/19/22/46/business-8458541_1280.jpg">
+    <mat-card-content>
+      <p>
+        Maria, uma empresária do ramo financeiro, é como uma estrategista habilidosa em meio a um tabuleiro complexo. Com uma mente afiada para números e uma visão clara dos movimentos do mercado, ela navega pelas marés voláteis da economia com confiança e determinação. 
+      </p>
+    </mat-card-content>
+    <mat-card-actions>
+      <button mat-button>LIKE</button>
+      <button mat-button>SHARE</button>
+    </mat-card-actions>
+  </mat-card>
+</div>
 
+<div>
+  <mat-card class="example-card">
+    <mat-card-header>
+      <mat-card-title>Joana</mat-card-title>
+      <mat-card-subtitle>Empresária</mat-card-subtitle>
+    </mat-card-header>
+    <img mat-card-image src="https://cdn.pixabay.com/photo/2017/09/21/19/06/woman-2773007_1280.jpg">
+    <mat-card-content>
+      <p>
+        Joana, uma empresária do ramo financeiro, é como uma estrategista habilidosa em meio a um tabuleiro complexo. Com uma mente afiada para números e uma visão clara dos movimentos do mercado, ela navega pelas marés voláteis da economia com confiança e determinação. 
+      </p>
+    </mat-card-content>
+    <mat-card-actions>
+      <button mat-button>LIKE</button>
+      <button mat-button>SHARE</button>
+    </mat-card-actions>
+  </mat-card>
+</div>
+
+<div>
+  <mat-card class="example-card">
+    <mat-card-header>
+      <mat-card-title>Carla</mat-card-title>
+      <mat-card-subtitle>Empresária</mat-card-subtitle>
+    </mat-card-header>
+    <img mat-card-image src="https://cdn.pixabay.com/photo/2023/12/29/10/39/woman-8475958_1280.jpg" alt="Photo of a Shiba Inu">
+    <mat-card-content>
+      <p>
+        Carla, uma empresária do ramo financeiro, é como uma estrategista habilidosa em meio a um tabuleiro complexo. Com uma mente afiada para números e uma visão clara dos movimentos do mercado, ela navega pelas marés voláteis da economia com confiança e determinação. 
+      </p>
+    </mat-card-content>
+    <mat-card-actions>
+      <button mat-button>LIKE</button>
+      <button mat-button>SHARE</button>
+    </mat-card-actions>
+  </mat-card>
+</div>
+</section> 
+  
