--- a/src/app/componentes/nav-bar/nav-bar.component.css
+++ b/src/app/componentes/nav-bar/nav-bar.component.css
@@ -6,14 +6,21 @@
   
   .navbar-brand {
     font-size: 24px;
+    margin: 0;
   }
   
   .navbar-nav .nav-item .nav-link {
-    color: #333;
-    font-weight: bold;
+    color: #ffffff;
   }
   
   .navbar-nav .nav-item .nav-link:hover {
     color: #ffffff;
   }
   
+  li{ 
+    list-style: none;
+}
+
+.example-spacer {
+  flex: 1 1 auto;
+}
