--- a/src/app/componentes/nav-bar/nav-bar.component.html
+++ b/src/app/componentes/nav-bar/nav-bar.component.html
@@ -1,10 +1,25 @@
+<mat-toolbar class="navbar">
+  <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
+    <mat-icon>menu</mat-icon>
+  </button>
+  <span>Empreenda Mulher</span>
+  <span class="example-spacer"></span>
+  <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
+    <mat-icon>favorite</mat-icon>
+  </button>
+  <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
+    <mat-icon>share</mat-icon>
+  </button>
+</mat-toolbar>
+
+<!-- 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
       <h3 class="navbar-brand">EmpreendaMulher</h3>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#">Galeria de Mulheres</a>
+            <a class="nav-link" href="galeria">Galeria de Mulheres</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Quiz</a>
@@ -16,4 +31,6 @@
       </div>
     </div>
   </nav>
+-->
+  
   
